--- a/src/components/Top/ApplicationDesc.css
+++ b/src/components/Top/ApplicationDesc.css
@@ -2,7 +2,6 @@
     background: #EB5757;
 } */
 .applicationDesc{
-    margin:auto;
-    position: absolute;
-    top:100px;
+    margin:80px auto;
+    width:400px;
 }
