--- a/src/components/Top/ApplicationDesc.css
+++ b/src/components/Top/ApplicationDesc.css
@@ -2,6 +2,17 @@
     background: #EB5757;
 } */
 .applicationDesc{
-    margin:80px auto;
+    margin:0 auto;
+    margin-top:130px;
     width:400px;
+    border-radius:40px;
+}
+.applicationDesc svg{
+    display: block;
+    float:left;
+    width:100px;
+    height:100%;
+}
+.applicationDesc p{
+    margin-left:150px;
 }
