--- a/src/components/Top/TopContent.css
+++ b/src/components/Top/TopContent.css
@@ -1,5 +1,14 @@
 .startButton {
+    display: block;
+    margin: 30px auto;
+    background: #56CCF2;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 3px;
-    background-color: blueviolet;
+    color:white;
+    height:80px;
+    width:200px;
+    font-size:18px;
+}
+.startButton:hover{
+    color:black;
 }
