--- a/src/components/Edit/ButtonWrapper.css
+++ b/src/components/Edit/ButtonWrapper.css
@@ -2,7 +2,8 @@
     width:50%;
     text-align: center;
 }
-.buttonWrapper button,a{
+.buttonWrapper button,.buttonWrapper a{
     width:100%;
     margin:3px auto;
+    background-color: #56CCF2;
 }
