--- a/src/components/Edit/EditItem.css
+++ b/src/components/Edit/EditItem.css
@@ -1,12 +1,19 @@
-.editItem{
-    width:400px;
-    height:200px;
-    margin:30px auto;
+.editItem {
+    width: 400px;
+    height: 200px;
+    margin: 30px auto;
 }
-.editItemContent{
-    height:100%;
+
+.editItemContent {
+    height: 100%;
     display: flex;
 }
-.editItemContent h1{
-    width:50%;
+
+.editItemContent h1 {
+    width: 50%;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    text-align: center;
 }
