--- a/src/components/CommonComponent/AddTestButton.css
+++ b/src/components/CommonComponent/AddTestButton.css
@@ -1,7 +1,7 @@
 .addTestButton {
     background-color: #56CCF2;
     position: fixed;
-    left:90%;
+    right:3%;
 }
 .addTestButton:hover svg{
     fill:black;
